[gd_scene load_steps=4 format=3 uid="uid://db81pviwl85bj"]

[ext_resource type="Script" uid="uid://dw52qmgxgj2mt" path="res://scenes/player_bullet.gd" id="1_4g3gs"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dwnph"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46jqs"]
size = Vector2(10, 10)

[node name="player_bullet" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_4g3gs")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.574796, 0.54491705, 1)
texture = SubResource("PlaceholderTexture2D_dwnph")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_46jqs")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
